# journal-rs

./: Cargo.toml  LICENSE  README.md
src/: journal.rs  main.rs
