[package]
name = "jn"
version = "0.1.0"
authors = ["Adolfo H. Wernke <adolfohw@gmail.com>"]
edition = "2018"
description = "A simple journaling app. Entries are saved under $HOME/.journal/{user}/{year}/{month}/{day}.json"
license = "MIT"
repository = "https://github.com/adolfohw/journal-rs"
keywords = ["journal"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "2.0"
hostname = "0.3"
serde_json = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
